<resources>
    <string name="app_name">com.rollonit.convert.Convert</string>
    <string name="convert">Convert</string>
    <string name="value_1">Input</string>
    <string name="value_2">Output</string>
    <string name="convertButton">Convert</string>
    <string name="default_value">0</string>
    <string name="length_title">Length</string>
    <string name="weight_title">Weight</string>
    <string name="temperature_title">Temperature</string>
    <string name="volume_title">Volume</string>
    <string name="time_title">Time</string>
    <string name="nav_open">Open Navbar</string>
    <string name="nav_close">Close Navbar</string>
    <string-array name="length_units">
        <item>Millimeters</item>
        <item>Centimeters</item>
        <item>Meters</item>
        <item>Kilometers</item>
        <item>Inches</item>
        <item>Feet</item>
        <item>Yards</item>
        <item>Miles</item>
        <item>Nautical Miles</item>
    </string-array>
    <string-array name="weight_units">
        <item>Milligrams</item>
        <item>Grams</item>
        <item>Kilograms</item>
        <item>Ounces</item>
        <item>Pounds</item>
    </string-array>
    <string-array name="volume_units">
        <item>Milliliters</item>
        <item>Liters</item>
        <item>Fluid Ounces</item>
        <item>Cups</item>
        <item>Pints</item>
        <item>Quarts</item>
        <item>Gallons</item>
        <item>Tablespoons</item>
        <item>Teaspoons</item>
    </string-array>
    <string-array name="temperature_units">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>
    <string-array name="time_units">
        <item>Milliseconds</item>
        <item>Seconds</item>
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>
</resources>
