<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation.xml"
    app:startDestination="@+id/nav_length">

    <fragment
        android:id="@+id/nav_length"
        android:name="com.rollonit.convert.ui.LengthFragment"
        android:label="@string/length_title"
        tools:layout="@layout/fragment_length" />

    <fragment
        android:id="@+id/nav_weight"
        android:name="com.rollonit.convert.ui.WeightFragment"
        android:label="@string/weight_title"
        tools:layout="@layout/fragment_weight" />

    <fragment
        android:id="@+id/nav_volume"
        android:name="com.rollonit.convert.ui.VolumeFragment"
        android:label="@string/volume_title"
        tools:layout="@layout/fragment_volume" />

    <fragment
        android:id="@+id/nav_time"
        android:name="com.rollonit.convert.ui.TimeFragment"
        android:label="@string/time_title"
        tools:layout="@layout/fragment_time" />

    <fragment
        android:id="@+id/nav_temperature"
        android:name="com.rollonit.convert.ui.TemperatureFragment"
        android:label="@string/temperature_title"
        tools:layout="@layout/fragment_temperature" />

</navigation>
